cleaned up notebooks

--- a/05_feature_engineering/05_homeaway.ipynb
+++ b/05_feature_engineering/05_homeaway.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:57.910976Z",
-     "start_time": "2019-01-25T05:16:52.140241Z"
+     "end_time": "2019-01-25T05:45:05.377803Z",
+     "start_time": "2019-01-25T05:44:59.532713Z"
     },
     "scrolled": true
    },
@@ -41,8 +41,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.037775Z",
-     "start_time": "2019-01-25T05:16:57.916924Z"
+     "end_time": "2019-01-25T05:45:05.509874Z",
+     "start_time": "2019-01-25T05:45:05.382690Z"
     }
    },
    "outputs": [],
@@ -165,7 +165,35 @@
    "source": [
     "## Home/Away Features\n",
     "* key: (game_id)\n",
-    "* table name: features.home_field"
+    "* table name: features.home_field\n",
+    "* __h_is_home__\n",
+    "* __v_is_home__\n",
+    "* __h_consecutive_home__\n",
+    "* __v_consecutive_visitor__\n",
+    "* __v_visitor____ovr_wr_ytd__\n",
+    "* __v_visitor____open_wr_ytd__\n",
+    "* __v_visitor____close_wr_ytd__\n",
+    "* __v_visitor____pfr_wr_ytd__\n",
+    "* __h_home____ovr_wr_ytd__\n",
+    "* __h_home____open_wr_ytd__\n",
+    "* __h_home____close_wr_ytd__\n",
+    "* __h_home____pfr_wr_ytd__\n",
+    "* __v_visitor____ovr_wr_last_4_games__\n",
+    "* __v_visitor____ovr_wr_last_8_games__\n",
+    "* __v_visitor____open_wr_last_4_games__\n",
+    "* __v_visitor____open_wr_last_8_games__\n",
+    "* __v_visitor____close_wr_last_4_games__\n",
+    "* __v_visitor____close_wr_last_8_games__\n",
+    "* __v_visitor____pfr_wr_last_4_games__\n",
+    "* __v_visitor____pfr_wr_last_8_games__\n",
+    "* __h_home____ovr_wr_last_4_games__\n",
+    "* __h_home____ovr_wr_last_8_games__\n",
+    "* __h_home____open_wr_last_4_games__\n",
+    "* __h_home____open_wr_last_8_games__\n",
+    "* __h_home____close_wr_last_4_games__\n",
+    "* __h_home____close_wr_last_8_games__\n",
+    "* __h_home____pfr_wr_last_4_games__\n",
+    "* __h_home____pfr_wr_last_8_games__"
    ]
   },
   {
@@ -173,8 +201,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.048219Z",
-     "start_time": "2019-01-25T05:16:58.042210Z"
+     "end_time": "2019-01-25T05:45:05.522525Z",
+     "start_time": "2019-01-25T05:45:05.515774Z"
     }
    },
    "outputs": [],
@@ -189,8 +217,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.484337Z",
-     "start_time": "2019-01-25T05:16:58.052317Z"
+     "end_time": "2019-01-25T05:45:05.952898Z",
+     "start_time": "2019-01-25T05:45:05.528132Z"
     }
    },
    "outputs": [],
@@ -211,8 +239,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.746294Z",
-     "start_time": "2019-01-25T05:16:58.490064Z"
+     "end_time": "2019-01-25T05:45:06.262081Z",
+     "start_time": "2019-01-25T05:45:05.958091Z"
     }
    },
    "outputs": [],
@@ -233,8 +261,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.775924Z",
-     "start_time": "2019-01-25T05:16:58.751330Z"
+     "end_time": "2019-01-25T05:45:06.297886Z",
+     "start_time": "2019-01-25T05:45:06.266953Z"
     }
    },
    "outputs": [],
@@ -267,8 +295,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.786690Z",
-     "start_time": "2019-01-25T05:16:58.781804Z"
+     "end_time": "2019-01-25T05:45:06.309833Z",
+     "start_time": "2019-01-25T05:45:06.303719Z"
     }
    },
    "outputs": [],
@@ -281,8 +309,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.863063Z",
-     "start_time": "2019-01-25T05:16:58.790061Z"
+     "end_time": "2019-01-25T05:45:06.404634Z",
+     "start_time": "2019-01-25T05:45:06.315246Z"
     }
    },
    "outputs": [],
@@ -312,8 +340,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.888440Z",
-     "start_time": "2019-01-25T05:16:58.867644Z"
+     "end_time": "2019-01-25T05:45:06.436899Z",
+     "start_time": "2019-01-25T05:45:06.409634Z"
     }
    },
    "outputs": [],
@@ -328,8 +356,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:16:58.972527Z",
-     "start_time": "2019-01-25T05:16:58.893892Z"
+     "end_time": "2019-01-25T05:45:06.549400Z",
+     "start_time": "2019-01-25T05:45:06.441933Z"
     }
    },
    "outputs": [],
@@ -378,8 +406,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:06.258205Z",
-     "start_time": "2019-01-25T05:16:58.976987Z"
+     "end_time": "2019-01-25T05:45:13.739336Z",
+     "start_time": "2019-01-25T05:45:06.554485Z"
     }
    },
    "outputs": [],
@@ -410,8 +438,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:11.322246Z",
-     "start_time": "2019-01-25T05:17:06.264243Z"
+     "end_time": "2019-01-25T05:45:18.569664Z",
+     "start_time": "2019-01-25T05:45:13.744208Z"
     }
    },
    "outputs": [
@@ -567,8 +595,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:11.685664Z",
-     "start_time": "2019-01-25T05:17:11.327798Z"
+     "end_time": "2019-01-25T05:45:18.979063Z",
+     "start_time": "2019-01-25T05:45:18.574797Z"
     }
    },
    "outputs": [],
@@ -617,8 +645,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:14.622498Z",
-     "start_time": "2019-01-25T05:17:11.690696Z"
+     "end_time": "2019-01-25T05:45:22.028828Z",
+     "start_time": "2019-01-25T05:45:18.984558Z"
     }
    },
    "outputs": [],
@@ -650,8 +678,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:20.837364Z",
-     "start_time": "2019-01-25T05:17:14.627929Z"
+     "end_time": "2019-01-25T05:45:28.165556Z",
+     "start_time": "2019-01-25T05:45:22.034317Z"
     }
    },
    "outputs": [
@@ -815,8 +843,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:20.845429Z",
-     "start_time": "2019-01-25T05:17:20.841475Z"
+     "end_time": "2019-01-25T05:45:28.175922Z",
+     "start_time": "2019-01-25T05:45:28.170428Z"
     }
    },
    "outputs": [],
@@ -829,8 +857,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:21.557573Z",
-     "start_time": "2019-01-25T05:17:20.851277Z"
+     "end_time": "2019-01-25T05:45:29.003986Z",
+     "start_time": "2019-01-25T05:45:28.181825Z"
     }
    },
    "outputs": [],
@@ -880,8 +908,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:28.363888Z",
-     "start_time": "2019-01-25T05:17:21.560888Z"
+     "end_time": "2019-01-25T05:45:36.330006Z",
+     "start_time": "2019-01-25T05:45:29.007649Z"
     },
     "scrolled": true
    },
@@ -945,8 +973,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:28.520264Z",
-     "start_time": "2019-01-25T05:17:28.368954Z"
+     "end_time": "2019-01-25T05:45:36.522762Z",
+     "start_time": "2019-01-25T05:45:36.335223Z"
     }
    },
    "outputs": [],
@@ -966,8 +994,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:28.683826Z",
-     "start_time": "2019-01-25T05:17:28.525734Z"
+     "end_time": "2019-01-25T05:45:36.697493Z",
+     "start_time": "2019-01-25T05:45:36.527194Z"
     }
    },
    "outputs": [],
@@ -981,8 +1009,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:28.841360Z",
-     "start_time": "2019-01-25T05:17:28.688787Z"
+     "end_time": "2019-01-25T05:45:36.858008Z",
+     "start_time": "2019-01-25T05:45:36.703046Z"
     }
    },
    "outputs": [
@@ -1237,8 +1265,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:28.881200Z",
-     "start_time": "2019-01-25T05:17:28.845641Z"
+     "end_time": "2019-01-25T05:45:36.896095Z",
+     "start_time": "2019-01-25T05:45:36.862736Z"
     }
    },
    "outputs": [],
@@ -1258,8 +1286,57 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:46.956355Z",
-     "start_time": "2019-01-25T05:17:28.887371Z"
+     "end_time": "2019-01-25T05:45:36.905504Z",
+     "start_time": "2019-01-25T05:45:36.900734Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* __h_is_home__\n",
+      "* __v_is_home__\n",
+      "* __h_consecutive_home__\n",
+      "* __v_consecutive_visitor__\n",
+      "* __v_visitor__ovr_wr_ytd__\n",
+      "* __v_visitor__open_wr_ytd__\n",
+      "* __v_visitor__close_wr_ytd__\n",
+      "* __v_visitor__pfr_wr_ytd__\n",
+      "* __h_home__ovr_wr_ytd__\n",
+      "* __h_home__open_wr_ytd__\n",
+      "* __h_home__close_wr_ytd__\n",
+      "* __h_home__pfr_wr_ytd__\n",
+      "* __v_visitor__ovr_wr_last_4_games__\n",
+      "* __v_visitor__ovr_wr_last_8_games__\n",
+      "* __v_visitor__open_wr_last_4_games__\n",
+      "* __v_visitor__open_wr_last_8_games__\n",
+      "* __v_visitor__close_wr_last_4_games__\n",
+      "* __v_visitor__close_wr_last_8_games__\n",
+      "* __v_visitor__pfr_wr_last_4_games__\n",
+      "* __v_visitor__pfr_wr_last_8_games__\n",
+      "* __h_home__ovr_wr_last_4_games__\n",
+      "* __h_home__ovr_wr_last_8_games__\n",
+      "* __h_home__open_wr_last_4_games__\n",
+      "* __h_home__open_wr_last_8_games__\n",
+      "* __h_home__close_wr_last_4_games__\n",
+      "* __h_home__close_wr_last_8_games__\n",
+      "* __h_home__pfr_wr_last_4_games__\n",
+      "* __h_home__pfr_wr_last_8_games__\n"
+     ]
+    }
+   ],
+   "source": [
+    "print '* __' + '__\\n* __'.join(features_list) + '__'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-25T05:45:53.561109Z",
+     "start_time": "2019-01-25T05:45:36.909551Z"
     }
    },
    "outputs": [],
@@ -1270,11 +1347,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:57.076472Z",
-     "start_time": "2019-01-25T05:17:46.962533Z"
+     "end_time": "2019-01-25T05:46:00.367051Z",
+     "start_time": "2019-01-25T05:45:53.566472Z"
     }
    },
    "outputs": [],
@@ -1286,11 +1363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:57.390270Z",
-     "start_time": "2019-01-25T05:17:57.082704Z"
+     "end_time": "2019-01-25T05:46:00.589785Z",
+     "start_time": "2019-01-25T05:46:00.370363Z"
     }
    },
    "outputs": [
@@ -1623,7 +1700,7 @@
        "h_home__pfr_wr_last_8_games                  1           0.5  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,19 +1723,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:58.076184Z",
-     "start_time": "2019-01-25T05:16:52.217Z"
+     "end_time": "2019-01-25T05:46:00.991195Z",
+     "start_time": "2019-01-25T05:44:59.565Z"
     }
    },
    "outputs": [],
@@ -1690,8 +1758,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:17:58.078792Z",
-     "start_time": "2019-01-25T05:16:52.219Z"
+     "end_time": "2019-01-25T05:46:00.992634Z",
+     "start_time": "2019-01-25T05:44:59.567Z"
     }
    },
    "outputs": [],
@@ -1727,7 +1795,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "336px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
