cleaned up feature engineering notebooks and re-ran

--- a/05_feature_engineering/00_plan_and_ideas.ipynb
+++ b/05_feature_engineering/00_plan_and_ideas.ipynb
@@ -190,10 +190,12 @@
     "* &#x23F8; historic cover rate at this spread\n",
     "\n",
     "### Weather\n",
-    "* &#x1F6A8; temperature\n",
-    "* &#x1F6A8; is_precipitation\n",
-    "* &#x1F6A8; is_snow\n",
-    "* &#x23F8; others?\n"
+    "* &#x2714; temperature, etc.\n",
+    "* &#x2714; is_dome\n",
+    "* &#x2714; turf\n",
+    "* &#x23F8; weather vs. previous game?\n",
+    "* &#x23F8; how does team play in this type of weather?\n",
+    "* &#x23F3; is_precipitation (snow)"
    ]
   },
   {
