--- a/05_feature_engineering/01_time_date.ipynb
+++ b/05_feature_engineering/01_time_date.ipynb
@@ -5,9 +5,10 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:12:56.010337Z",
-     "start_time": "2019-01-25T05:12:42.361359Z"
-    }
+     "end_time": "2019-01-27T06:27:19.208774Z",
+     "start_time": "2019-01-27T06:27:09.067034Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -48,8 +49,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:12:56.020399Z",
-     "start_time": "2019-01-25T05:12:56.015280Z"
+     "end_time": "2019-01-27T06:27:19.219861Z",
+     "start_time": "2019-01-27T06:27:19.213741Z"
     }
    },
    "outputs": [],
@@ -64,19 +65,21 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:12:57.460736Z",
-     "start_time": "2019-01-25T05:12:56.026501Z"
+     "end_time": "2019-01-27T06:27:22.313780Z",
+     "start_time": "2019-01-27T06:27:19.225244Z"
     }
    },
    "outputs": [],
    "source": [
     "gametime = spark.table('game_metadata').join(\n",
-    "    spark.table('game'), on='game_id'\n",
-    ").join(\n",
-    "    spark.table('stadium'), on='stadium'\n",
-    ").select('game_id','time','stadium','timezone',\n",
-    "         'day_of_week','week_id',\n",
-    "         'game_time_eastern','game_time_local').cache()"
+    "        spark.table('game'), on='game_id'\n",
+    "    ).join(\n",
+    "        spark.table('stadium'), on=['stadium','season']\n",
+    "    ).select('game_id','time','stadium','timezone',\n",
+    "             'day_of_week','week_id',\n",
+    "             'game_time_eastern','game_time_local').cache()\n",
+    "\n",
+    "assert spark.table('game').count() == gametime.count()"
    ]
   },
   {
@@ -102,8 +105,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:13:00.347576Z",
-     "start_time": "2019-01-25T05:12:57.465372Z"
+     "end_time": "2019-01-27T06:27:22.984178Z",
+     "start_time": "2019-01-27T06:27:22.319250Z"
     }
    },
    "outputs": [
@@ -152,45 +155,45 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>201409070dal</td>\n",
-       "      <td>4:25pm</td>\n",
+       "      <td>201411020dal</td>\n",
+       "      <td>1:04pm</td>\n",
        "      <td>AT&amp;T Stadium</td>\n",
        "      <td>-6.0</td>\n",
        "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>201409070dal</td>\n",
+       "      <td>201410190dal</td>\n",
        "      <td>4:25pm</td>\n",
        "      <td>AT&amp;T Stadium</td>\n",
        "      <td>-6.0</td>\n",
        "      <td>6</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>16.0</td>\n",
        "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>201409070dal</td>\n",
-       "      <td>4:25pm</td>\n",
+       "      <td>201309080dal</td>\n",
+       "      <td>8:30pm</td>\n",
        "      <td>AT&amp;T Stadium</td>\n",
        "      <td>-6.0</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>201409070dal</td>\n",
+       "      <td>201510110dal</td>\n",
        "      <td>4:25pm</td>\n",
        "      <td>AT&amp;T Stadium</td>\n",
        "      <td>-6.0</td>\n",
        "      <td>6</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>16.0</td>\n",
        "      <td>15.0</td>\n",
        "    </tr>\n",
@@ -201,16 +204,16 @@
       "text/plain": [
        "        game_id    time       stadium  timezone  day_of_week  week_id  \\\n",
        "0  201409070dal  4:25pm  AT&T Stadium      -6.0            6        1   \n",
-       "1  201409070dal  4:25pm  AT&T Stadium      -6.0            6        1   \n",
-       "2  201409070dal  4:25pm  AT&T Stadium      -6.0            6        1   \n",
-       "3  201409070dal  4:25pm  AT&T Stadium      -6.0            6        1   \n",
-       "4  201409070dal  4:25pm  AT&T Stadium      -6.0            6        1   \n",
+       "1  201411020dal  1:04pm  AT&T Stadium      -6.0            6        9   \n",
+       "2  201410190dal  4:25pm  AT&T Stadium      -6.0            6        7   \n",
+       "3  201309080dal  8:30pm  AT&T Stadium      -6.0            6        1   \n",
+       "4  201510110dal  4:25pm  AT&T Stadium      -6.0            6        5   \n",
        "\n",
        "   game_time_eastern  game_time_local  \n",
        "0               16.0             15.0  \n",
-       "1               16.0             15.0  \n",
+       "1               13.0             12.0  \n",
        "2               16.0             15.0  \n",
-       "3               16.0             15.0  \n",
+       "3               21.0             20.0  \n",
        "4               16.0             15.0  "
       ]
      },
@@ -242,8 +245,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:13:00.605044Z",
-     "start_time": "2019-01-25T05:13:00.354031Z"
+     "end_time": "2019-01-27T06:27:23.065964Z",
+     "start_time": "2019-01-27T06:27:22.989894Z"
     }
    },
    "outputs": [],
@@ -262,8 +265,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:13:01.993518Z",
-     "start_time": "2019-01-25T05:13:00.610120Z"
+     "end_time": "2019-01-27T06:27:23.910034Z",
+     "start_time": "2019-01-27T06:27:23.073134Z"
     }
    },
    "outputs": [
@@ -296,12 +299,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>3574</td>\n",
+       "      <td>429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>20338</td>\n",
+       "      <td>2508</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -309,8 +312,8 @@
       ],
       "text/plain": [
        "   is_sunday  count\n",
-       "0        0.0   3574\n",
-       "1        1.0  20338"
+       "0        0.0    429\n",
+       "1        1.0   2508"
       ]
      },
      "execution_count": 6,
@@ -335,8 +338,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:13:03.004608Z",
-     "start_time": "2019-01-25T05:13:01.998996Z"
+     "end_time": "2019-01-27T06:27:24.516935Z",
+     "start_time": "2019-01-27T06:27:23.914540Z"
     }
    },
    "outputs": [
@@ -369,107 +372,107 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>19</td>\n",
-       "      <td>385</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>7</td>\n",
-       "      <td>1256</td>\n",
+       "      <td>155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6</td>\n",
-       "      <td>1228</td>\n",
+       "      <td>155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>9</td>\n",
-       "      <td>1134</td>\n",
+       "      <td>147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>17</td>\n",
-       "      <td>1394</td>\n",
+       "      <td>176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>1224</td>\n",
+       "      <td>154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>1</td>\n",
-       "      <td>1401</td>\n",
+       "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>10</td>\n",
-       "      <td>1327</td>\n",
+       "      <td>156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>3</td>\n",
-       "      <td>1434</td>\n",
+       "      <td>176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>12</td>\n",
-       "      <td>1392</td>\n",
+       "      <td>173</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>8</td>\n",
-       "      <td>1253</td>\n",
+       "      <td>148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>11</td>\n",
-       "      <td>1298</td>\n",
+       "      <td>163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>2</td>\n",
-       "      <td>1443</td>\n",
+       "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>4</td>\n",
-       "      <td>1311</td>\n",
+       "      <td>160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>13</td>\n",
-       "      <td>1425</td>\n",
+       "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>18</td>\n",
-       "      <td>374</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>14</td>\n",
-       "      <td>1455</td>\n",
+       "      <td>176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>21</td>\n",
-       "      <td>74</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>15</td>\n",
-       "      <td>1415</td>\n",
+       "      <td>176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>20</td>\n",
-       "      <td>211</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>16</td>\n",
-       "      <td>1478</td>\n",
+       "      <td>176</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -477,27 +480,27 @@
       ],
       "text/plain": [
        "    week_id  count\n",
-       "0        19    385\n",
-       "1         7   1256\n",
-       "2         6   1228\n",
-       "3         9   1134\n",
-       "4        17   1394\n",
-       "5         5   1224\n",
-       "6         1   1401\n",
-       "7        10   1327\n",
-       "8         3   1434\n",
-       "9        12   1392\n",
-       "10        8   1253\n",
-       "11       11   1298\n",
-       "12        2   1443\n",
-       "13        4   1311\n",
-       "14       13   1425\n",
-       "15       18    374\n",
-       "16       14   1455\n",
-       "17       21     74\n",
-       "18       15   1415\n",
-       "19       20    211\n",
-       "20       16   1478"
+       "0        19     44\n",
+       "1         7    155\n",
+       "2         6    155\n",
+       "3         9    147\n",
+       "4        17    176\n",
+       "5         5    154\n",
+       "6         1    175\n",
+       "7        10    156\n",
+       "8         3    176\n",
+       "9        12    173\n",
+       "10        8    148\n",
+       "11       11    163\n",
+       "12        2    175\n",
+       "13        4    160\n",
+       "14       13    175\n",
+       "15       18     44\n",
+       "16       14    176\n",
+       "17       21     11\n",
+       "18       15    176\n",
+       "19       20     22\n",
+       "20       16    176"
       ]
      },
      "execution_count": 7,
@@ -514,8 +517,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:13:03.137150Z",
-     "start_time": "2019-01-25T05:13:03.013183Z"
+     "end_time": "2019-01-27T06:27:24.657343Z",
+     "start_time": "2019-01-27T06:27:24.522630Z"
     },
     "run_control": {
      "marked": true
@@ -546,8 +549,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:13:05.438100Z",
-     "start_time": "2019-01-25T05:13:03.143608Z"
+     "end_time": "2019-01-27T06:27:25.952929Z",
+     "start_time": "2019-01-27T06:27:24.664330Z"
     },
     "scrolled": true
    },
@@ -562,8 +565,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:13:05.916906Z",
-     "start_time": "2019-01-25T05:13:05.443506Z"
+     "end_time": "2019-01-27T06:27:26.198607Z",
+     "start_time": "2019-01-27T06:27:25.957776Z"
     }
    },
    "outputs": [
@@ -601,56 +604,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>200810050det</td>\n",
+       "      <td>201510040chi</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>200810050det</td>\n",
+       "      <td>201511220det</td>\n",
        "      <td>13.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>200810050det</td>\n",
+       "      <td>201511080pit</td>\n",
        "      <td>13.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>200810050det</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>201601030kan</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>200810050det</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>201512130den</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -660,18 +663,18 @@
       ],
       "text/plain": [
        "        game_id  game_time_eastern  game_time_local  day_of_week  is_sunday  \\\n",
-       "0  200810050det               13.0             13.0          6.0        1.0   \n",
-       "1  200810050det               13.0             13.0          6.0        1.0   \n",
-       "2  200810050det               13.0             13.0          6.0        1.0   \n",
-       "3  200810050det               13.0             13.0          6.0        1.0   \n",
-       "4  200810050det               13.0             13.0          6.0        1.0   \n",
+       "0  201510040chi               13.0             12.0          6.0        1.0   \n",
+       "1  201511220det               13.0             13.0          6.0        1.0   \n",
+       "2  201511080pit               13.0             13.0          6.0        1.0   \n",
+       "3  201601030kan               16.0             15.0          6.0        1.0   \n",
+       "4  201512130den               16.0             14.0          6.0        1.0   \n",
        "\n",
        "   week_id  is_playoffs  is_superbowl  \n",
-       "0      5.0          0.0           0.0  \n",
-       "1      5.0          0.0           0.0  \n",
-       "2      5.0          0.0           0.0  \n",
-       "3      5.0          0.0           0.0  \n",
-       "4      5.0          0.0           0.0  "
+       "0      4.0          0.0           0.0  \n",
+       "1     11.0          0.0           0.0  \n",
+       "2      9.0          0.0           0.0  \n",
+       "3     17.0          0.0           0.0  \n",
+       "4     14.0          0.0           0.0  "
       ]
      },
      "execution_count": 10,
