--- a/05_feature_engineering/02_teams.ipynb
+++ b/05_feature_engineering/02_teams.ipynb
@@ -2,25 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:00.200323Z",
-     "start_time": "2019-01-25T05:28:54.434402Z"
+     "end_time": "2019-01-27T06:35:32.506500Z",
+     "start_time": "2019-01-27T06:35:32.493470Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>.container {width:90% !important;}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:File `u'../config/initialize.ipynb.py'` not found.\n"
+     ]
     }
    ],
    "source": [
@@ -29,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:00.211204Z",
-     "start_time": "2019-01-25T05:29:00.205856Z"
+     "end_time": "2019-01-27T06:35:32.516140Z",
+     "start_time": "2019-01-27T06:35:32.511132Z"
     }
    },
    "outputs": [],
@@ -50,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:00.352823Z",
-     "start_time": "2019-01-25T05:29:00.217497Z"
+     "end_time": "2019-01-27T06:35:32.584250Z",
+     "start_time": "2019-01-27T06:35:32.519679Z"
     }
    },
    "outputs": [],
@@ -173,11 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:00.365880Z",
-     "start_time": "2019-01-25T05:29:00.358536Z"
+     "end_time": "2019-01-27T06:35:32.596667Z",
+     "start_time": "2019-01-27T06:35:32.589473Z"
     }
    },
    "outputs": [],
@@ -219,11 +214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:00.388510Z",
-     "start_time": "2019-01-25T05:29:00.371573Z"
+     "end_time": "2019-01-27T06:35:32.614470Z",
+     "start_time": "2019-01-27T06:35:32.601091Z"
     },
     "scrolled": true
    },
@@ -345,17 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:00.396150Z",
-     "start_time": "2019-01-25T05:29:00.392290Z"
+     "end_time": "2019-01-27T06:35:32.624211Z",
+     "start_time": "2019-01-27T06:35:32.618875Z"
     }
    },
    "outputs": [],
    "source": [
     "key = 'game_id'\n",
-    "out_tbl = 'features.matchup'\n",
+    "out_tbl = 'features.team_history'\n",
     "features_list = []"
    ]
   },
@@ -368,11 +363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:01.898298Z",
-     "start_time": "2019-01-25T05:29:00.402179Z"
+     "end_time": "2019-01-27T06:35:34.789935Z",
+     "start_time": "2019-01-27T06:35:32.628677Z"
     }
    },
    "outputs": [],
@@ -382,11 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:04.421822Z",
-     "start_time": "2019-01-25T05:29:01.902858Z"
+     "end_time": "2019-01-27T06:35:37.337538Z",
+     "start_time": "2019-01-27T06:35:34.796530Z"
     }
    },
    "outputs": [
@@ -497,7 +492,7 @@
        "4        0.5       1.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,11 +519,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:10.090042Z",
-     "start_time": "2019-01-25T05:29:04.426432Z"
+     "end_time": "2019-01-27T06:35:42.514640Z",
+     "start_time": "2019-01-27T06:35:37.342585Z"
     }
    },
    "outputs": [
@@ -748,7 +743,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,11 +792,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:10.107990Z",
-     "start_time": "2019-01-25T05:29:10.096292Z"
+     "end_time": "2019-01-27T06:35:42.529553Z",
+     "start_time": "2019-01-27T06:35:42.519125Z"
     }
    },
    "outputs": [],
@@ -840,11 +835,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:54.984655Z",
-     "start_time": "2019-01-25T05:29:10.113067Z"
+     "end_time": "2019-01-27T06:36:32.673970Z",
+     "start_time": "2019-01-27T06:35:42.533506Z"
     }
    },
    "outputs": [
@@ -898,11 +893,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:55.132011Z",
-     "start_time": "2019-01-25T05:29:54.989665Z"
+     "end_time": "2019-01-27T06:36:32.808691Z",
+     "start_time": "2019-01-27T06:36:32.679651Z"
     }
    },
    "outputs": [],
@@ -919,11 +914,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:29:57.512885Z",
-     "start_time": "2019-01-25T05:29:55.136621Z"
+     "end_time": "2019-01-27T06:36:35.208401Z",
+     "start_time": "2019-01-27T06:36:32.813482Z"
     }
    },
    "outputs": [],
@@ -949,11 +944,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:30:01.078236Z",
-     "start_time": "2019-01-25T05:29:57.517644Z"
+     "end_time": "2019-01-27T06:36:39.548431Z",
+     "start_time": "2019-01-27T06:36:35.213134Z"
     }
    },
    "outputs": [],
@@ -964,11 +959,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:30:01.277436Z",
-     "start_time": "2019-01-25T05:30:01.082715Z"
+     "end_time": "2019-01-27T06:36:39.796154Z",
+     "start_time": "2019-01-27T06:36:39.554531Z"
     }
    },
    "outputs": [
@@ -1341,7 +1336,7 @@
        "v_ovr_wr_past_3_seasons            0.75         0.375  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
